--- a/templates/change-password.html
+++ b/templates/change-password.html
@@ -21,7 +21,18 @@
     <h4>{{ session['first_name'] }} {{ session['last_name'] }}</h4>
     <span>{{ session['role'] }}</span>      
   </div>
-
+{% if error %}
+         <p style="color:red; text-align: center; font-size: 12px;"><strong>Error:</strong> {{ error }}
+      {% endif %}
+      {% with messages = get_flashed_messages() %}
+         {% if messages %}
+            <ul>
+               {% for message in messages %}
+               <p style="color: green">{{ message }}</p>
+               {% endfor %}
+            </ul>
+         {% endif %}
+      {% endwith %}
 
   <div class="form-holder">
     <h2>Change Password</h2>
