--- a/templates/add-evac.html
+++ b/templates/add-evac.html
@@ -14,7 +14,18 @@
 
 
 	</div>
-
+{% if error %}
+         <p style="color:red; text-align: center; font-size: 12px;"><strong>Error:</strong> {{ error }}
+      {% endif %}
+      {% with messages = get_flashed_messages() %}
+         {% if messages %}
+            <ul>
+               {% for message in messages %}
+               <p style="color: green">{{ message }}</p>
+               {% endfor %}
+            </ul>
+         {% endif %}
+      {% endwith %}
 	<div class="information-holder">
 		<h4>Evacuation Center</h4>
     <hr>
@@ -34,7 +45,7 @@
 
         <div class="submit-button">  
           <button style="background-color: #1ab394;" type="submit">Submit</button>
-          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate">Cancel</button>
+          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('view_center') }}">Cancel</a></button>
         </div>
       </form>
     </div>
