--- a/templates/add-evacuee.html
+++ b/templates/add-evacuee.html
@@ -3,7 +3,7 @@
 <div class="content-holder">
 	<div class="title">
 		<h4>USER MANAGEMENT</h4>
-		<span>Home / Users / <b> Add </b></span>
+		<span>Home / Users / Evacuee / <b> Add </b></span>
 
     <div class="search-container">
       <form action="{{ url_for('search_user') }}" method="post">
@@ -12,7 +12,7 @@
       </form>
     </div>
 	</div>
-    {% if error %}
+  {% if error %}
          <p style="color:red; text-align: center; font-size: 12px;"><strong>Error:</strong> {{ error }}
       {% endif %}
       {% with messages = get_flashed_messages() %}
@@ -29,32 +29,35 @@
     <hr>
 	
     <div class="add-form">
-  		<form action="{{ url_for('add_user') }}" method="post" xmlns="http://www.w3.org/1999/html">
+  		<form action="{{ url_for('add_evacuee') }}" method="post" xmlns="http://www.w3.org/1999/html">
         <div class="form1">
           <!-- <label for="username"><b>Username</b></label> -->
-          <input type="text" placeholder="Username" name="username" required>
+          <input type="text" placeholder="Name" name="name" required>
             
           <!-- <label for="email"><b>Email</b></label> -->
-          <input type="text" placeholder="Email" name="email" required>
+          <input type="text" placeholder="Address" name="address" required>
         </div>
 
         <div class="form2">
           <!-- <label for="first_name"><b>First Name</b></label> -->
-          <input type="text" placeholder="First Name" name="first_name" required>
+          <input type="number" placeholder="Age" name="age" required>
              
           <!-- <label for="last_name"><b>Last name</b></label> -->
-          <input type="text" placeholder="Last Name" name="last_name" required>
+          <input type="text" placeholder="Religion" name="religion" required>
+        </div>
+
+         <div class="form4">
+          <!-- <label for="first_name"><b>First Name</b></label> -->
+          <input type="text" placeholder="Civil Status" name="civil_status" required>
+             
+          <!-- <label for="last_name"><b>Last name</b></label> -->
+          <input type="text" placeholder="Educational Attainment" name="educ_attainment" required>
         </div>
 
         <div class="form3">
           <!-- <label for="role"><b>Role</b></label> -->
-          <select name="role">
-            <option>Select Role</option>
-            <option value="Main Admin">Main Admin</option>
-            <option value="Relief Admin">Relief Admin</option>
-            <option value="Social Worker Admin">Social Worker Admin</option>
-          </select>
-            
+          
+          <input type="text" placeholder="Occupation" name="occupation" required>
           <!-- <label for="password"><b>Gender</b></label> -->
           <select name="gender">
             <option>Select Gender</option>
@@ -65,7 +68,7 @@
 
         <div class="submit-button">  
           <button style="background-color: #1ab394;" type="submit">Submit</button>
-          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('viewuser') }}">Cancel</a></button>
+          <button style="background-color: #0bbc94;" type="submit" value="Cancel" formnovalidate="formnovalidate"><a href="{{ url_for('viewevacuees') }}">Cancel</a></button>
         </div>
       </form>
      </div>
