--- a/templates/assign-evacuee.html
+++ b/templates/assign-evacuee.html
@@ -6,15 +6,24 @@
 
 	<div class="title">
 		<h4>EVACUATION CENTER</h4>
-		<span>Home / Evacuaton / View / <b> {{ name }} </b> </span> 
+		<span>Home / Evacuation / View / <b> {{ name }} </b> </span> 
 		<div class="action-icon">
 		<span><p><a href = "{{ url_for('update_center', public_id=public_id ) }}">edit</a></p> | <a href="#"><p id="myBtn">delete</p></a>
 </span>
 		</div>
 	</div>
 
-	
+	<div style="float: left;" class="search-container">
+      
+      <form action="{{ url_for('search_evacuee', name=name, public_id=public_id) }}" method="post">
+        <input style="margin-top: 20px; margin-left: 20px;" type="text" name="keyword" placeholder="Search user.." name="search">
+        <button style="margin-top: 20px;" type="submit"><i class="fa fa-search"></i></button>
+      </form>
+    </div>
 
+     
+<br>
+<br>
 
   <div class="information-holder">
   	<h4>ASSIGN EVACUEE</h4>
@@ -35,9 +44,9 @@
     </div>
   </div>
 
-  <div class="map-holder">
+<!--   <div class="map-holder">
   	<div id="googleMap" style="width:100%;height:400px;"></div>
-  </div>
+  </div> -->
 
 
 
@@ -117,6 +126,6 @@ var marker = new google.maps.Marker({
       }
     </script> -->
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAayoLLtuuXjGtgaxIURWpfzRrGDZ1KgVc&callback=myMap"></script>
+<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAayoLLtuuXjGtgaxIURWpfzRrGDZ1KgVc&callback=myMap"></script> -->
 
 {% endblock %}
