--- a/templates/dependent-result.html
+++ b/templates/dependent-result.html
@@ -4,22 +4,18 @@
 <div class="content-holder">
 
 	<div class="title">
-		<h4>EVACUATION CENTER</h4>
-		<span>Home / Evacuaton / <b> View </b></span>
+		<h4>DEPENDENTS</h4>
+		<span>Home / Evacuees / Dependents / <b> Result </b></span>
 
     <div class="search-container">
       <form action="{{ url_for('search_center') }}" method="post">
-        <input style="z-index: -5;" type="text" name="keyword" placeholder="Search center.." name="search">
+        <input type="text" name="keyword" placeholder="Search.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
     </div>
 
 	</div>
 
-<div class="action-holder">
-          <a href="/add/center"><img src="/static/img/add-location.png" width="30" height="30" style="margin: 5px;" align="left"  /></a>
-          <!-- <h1><a href="#">Evacuation &nbsp &nbsp > </a></h1> -->
-</div>
 
 <div class="holder">
 <div class="table">
@@ -29,7 +25,10 @@
 		<tr>
         <th>NAME</th>
         <th>ADDRESS</th>
-        <th>CAPACITY</th>
+        <th>GENDER</th>
+        <th>AGE</th>
+        <th>EDUCATIONAL ATTAINMENT</th>
+        <th>OCCUPATION</th>
         <th>VIEW</th>
 		</tr>
 	</div>
@@ -37,9 +36,12 @@
   <tr>
     <td> {{ evac.name }}</td>
     <td> {{ evac.address }}</td>
-    <td> {{ evac.capacity }}</td>
+    <td> {{ evac.gender }}</td>
+    <td> {{ evac.age }}</td>
+    <td> {{ evac.educ_attainment }}</td>
+    <td> {{ evac.occupation }}</td>
     <td style="position: relative; display: flex; ">
-      <a href = "{{ url_for('view_spec_center', name=evac.name, public_id=evac.public_id) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
+      <a href = "{{ url_for('add_search_dependent', name=evac.name,home_id=home_id, address=evac.address, dependents_id=evac.dependents_id, name2=name) }}"><img src="/static/img/add-dependents.png" style="margin:5px;" width="25" height="25"  /></a>
       <!-- <button id="myBtn"><a href="#myModal"><img src="/static/img/deletes.png"  width="20" height="25" style="margin: 5px;" /></input></a></button> -->
     </td>
   </tr>
