--- a/templates/maps.html
+++ b/templates/maps.html
@@ -20,8 +20,8 @@
   </div>
 
 
-  <div class="holder">
-    <div id="map_div" style="width: 100%; height: 400px;"></div>
+  <div style="margin: 0px;" class="holder">
+    <div id="map_div" style="width: 100%; height: 450px;"></div>
   </div>
 </div>
 
