--- a/templates/profile-evacuee.html
+++ b/templates/profile-evacuee.html
@@ -15,7 +15,8 @@ profile-mobile.html{% extends "mainadmin-base.html" %}
           <img src="/static/img/settings.png" width="30" height="30" style="margin: 5px;" align="right"  />
           <!-- <h1><a href="#">Evacuation &nbsp &nbsp > </a></h1> -->
           <div class="dropdown-settings">
-            <a href="{{ url_for('update_evacuee', home_id=json_data.home_id ) }}">Edit Profile</a>
+            <a href="{{ url_for('update_evacuee', home_id=json_data.home_id ) }}">Update Profile</a>
+            <a href="{{ url_for('remove_evacuee', name=json_data.name, home_id=json_data.home_id ) }}">Remove Evacuee</a>
             <a id="myBtn" href="#">Delete Profile</a>
       </div>
 
@@ -25,7 +26,18 @@ profile-mobile.html{% extends "mainadmin-base.html" %}
     <h4>{{ json_data.name }}</h4>
     <span>Evacuee</span>     
   </div>
-
+      {% if error %}
+         <p style="color:red; text-align: center; font-size: 12px;"><strong>Error:</strong> {{ error }}
+      {% endif %}
+      {% with messages = get_flashed_messages() %}
+         {% if messages %}
+            <ul>
+               {% for message in messages %}
+               <p style="color: green">{{ message }}</p>
+               {% endfor %}
+            </ul>
+         {% endif %}
+      {% endwith %}
 
 
   <div class="information-holder">
@@ -82,7 +94,7 @@ profile-mobile.html{% extends "mainadmin-base.html" %}
     <td> {{ user.occupation }}</td>
 
     <td style="position: relative; display: flex; ">
-      <a href = "{{ url_for('viewprofile_dependent',  dependents_id=user.dependents_id, name=user.name) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
+      <a href = "{{ url_for('viewprofile_dependent', dependents_id=user.dependents_id, name=user.name) }}"><img src="/static/img/web.png" style="margin:5px;" width="25" height="25"  /></a>
       
     </td>
 
@@ -97,9 +109,9 @@ profile-mobile.html{% extends "mainadmin-base.html" %}
       <!-- Modal content -->
         <div class="modal-content" >
           <span class="close">&times;</span>
-          <p>Are you sure to delete this user?</p>
+          <p style="color: #717476;">Are you sure to delete this user?</p>
           <div style="position: relative; display: flex; justify-content: center;" >
-          <button style="background-color:#de0020;"><a href="{{ url_for('delete_dependent', home_id=json_data.home_id, dependents_id=json_data.dependents_id) }}">Yes</a></button>
+          <button style="background-color:#de0020;"><a href="{{ url_for('delete_evacuee', home_id=json_data.home_id, dependents_id=json_data.dependents_id) }}">Yes</a></button>
           <button style="background-color: #0bbc94;"><a href="{{ url_for('viewprofile_evacuee', name=json_data.name, home_id=json_data.home_id) }}" >No</a></button>
         </div>
   </div> 
