--- a/templates/login.html
+++ b/templates/login.html
@@ -51,7 +51,7 @@
 
 	<div id="id02" class="modal">
 	  
-	  <form class="modal-content animate" action="/action_page.php">
+	  <form class="modal-content animate" action="{{ url_for('loginprocess') }}">
 	    <div class="imgcontainer">
 	      <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
 	      <img src="static/img/admin1.png">
@@ -59,11 +59,11 @@
 	    </div>
 
 	    <div class="container">
-	      <label for="uname"><b>Username</b></label>
-	      <input type="text" placeholder="Enter Username" name="uname" required>
+	      <label for="email"><b>Username</b></label>
+	      <input type="text" placeholder="Enter Username" name="email" required>
 
-	      <label for="psw"><b>Password</b></label>
-	      <input type="password" placeholder="Enter Password" name="psw" required>
+	      <label for="password"><b>Password</b></label>
+	      <input type="password" placeholder="Enter Password" name="password" required>
 	        
 	      <button type="submit">Login</button>
 	      <!-- <label>
@@ -80,7 +80,7 @@
 
 	<div id="id03" class="modal">
 	  
-	  <form class="modal-content animate" action="/action_page.php">
+	  <form class="modal-content animate" action="{{ url_for('loginprocess') }}">
 	    <div class="imgcontainer">
 	      <span onclick="document.getElementById('id03').style.display='none'" class="close" title="Close Modal">&times;</span>
 	      <img src="static/img/admin1.png">
@@ -88,11 +88,11 @@
 	    </div>
 
 	    <div class="container">
-	      <label for="uname"><b>Username</b></label>
-	      <input type="text" placeholder="Enter Username" name="uname" required>
+	      <label for="email"><b>Username</b></label>
+	      <input type="text" placeholder="Enter Username" name="email" required>
 
-	      <label for="psw"><b>Password</b></label>
-	      <input type="password" placeholder="Enter Password" name="psw" required>
+	      <label for="password"><b>Password</b></label>
+	      <input type="password" placeholder="Enter Password" name="password" required>
 	        
 	      <button type="submit">Login</button>
 	      <!-- <label>
