improvements on routes and templates

--- a/main/templates/add-user.html
+++ b/main/templates/add-user.html
@@ -39,9 +39,9 @@
           <!-- <label for="role"><b>Role</b></label> -->
           <select name="role">
             <option>Select Role</option>
-            <option value="Main Admin">Main Admin</option>
-            <option value="Relief Admin">Relief Admin</option>
-            <option value="Social Worker Admin">Social Worker Admin</option>
+            <option value=4>Main Admin</option>
+            <option value=3>Relief Admin</option>
+            <option value=2>Social Worker Admin</option>
           </select>
             
           <!-- <label for="password"><b>Gender</b></label> -->
