--- a/main/templates/no-center-result.html
+++ b/main/templates/no-center-result.html
@@ -8,7 +8,7 @@
     <span>Home / Evacuaton / <b> Result </b></span>
 
     <div class="search-container">
-      <form action="{{ url_for('search_center') }}" method="post">
+      <form action="{{ url_for('search.search_center') }}" method="post">
         <input type="text" name="keyword" placeholder="Search center.." name="search">
         <button type="submit"><i class="fa fa-search"></i></button>
       </form>
